[gd_scene load_steps=20 format=3 uid="uid://bc6sehgwqey1q"]

[ext_resource type="Texture2D" uid="uid://bh6cd3a6acb1g" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Textures/UI/Tablet_Assets/Title_Screen_Assets/Title_Settings_Backing.png" id="1_35aee"]
[ext_resource type="Script" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Scripts/Client/UI/Title_Screen/title_settings_adjust.gd" id="2_v426w"]
[ext_resource type="Theme" uid="uid://bst76owxspkj5" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Themes/Hexii_Device_UI.tres" id="3_tssdb"]
[ext_resource type="FontFile" uid="uid://qmcw1vrbnrwr" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Fonts/Jura/Jura-Bold.ttf" id="4_o3kyl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5k6m"]
bg_color = Color(0.341176, 0.623529, 0.890196, 1)
border_width_right = 100
border_color = Color(0.756037, 0.8, 0.405259, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_h1uor"]
color = Color(1, 1, 1, 0.248)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adh8d"]
content_margin_left = 10.0
bg_color = Color(0.178, 0.589, 0.839, 0.676)
border_width_right = 160
border_color = Color(0.8, 0.798887, 0.539517, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sks6k"]
content_margin_left = 10.0
bg_color = Color(0.178, 0.589, 0.839, 0)
border_color = Color(0.8, 0.799, 0.54, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i517j"]

[sub_resource type="Gradient" id="Gradient_yrh5i"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.5)
colors = PackedColorArray(0, 1, 0.100754, 1, 0, 0.470588, 0.792157, 0.298039)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_psoo3"]
gradient = SubResource("Gradient_yrh5i")
width = 32
height = 12

[sub_resource type="Gradient" id="Gradient_sbq85"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.5)
colors = PackedColorArray(0, 0.470675, 0.792969, 0.298039, 1, 0, 0.228847, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mm8cu"]
gradient = SubResource("Gradient_sbq85")
width = 32
height = 12

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nctn5"]
color = Color(1, 1, 1, 1)
grow_begin = -7.0
grow_end = -7.0
thickness = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r52jw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_re2np"]
bg_color = Color(0.6, 0, 0.492, 0.79)
border_width_left = 26
border_width_right = 26
border_color = Color(0, 0.139919, 1, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwx1o"]
bg_color = Color(0.6, 0, 0.492456, 0.357)
border_width_left = 26
border_width_right = 26
border_color = Color(0.271592, 0.532995, 1, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bm522"]
bg_color = Color(0.114622, 0, 0.6, 0.357)
border_width_left = 26
border_width_right = 26
border_color = Color(0, 1, 0.938656, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kmnbe"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/Open = false
metadata/Close_Pos = Vector2(43.5, 380)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 443.0
offset_bottom = 377.0
texture = ExtResource("1_35aee")

[node name="Screens" type="Control" parent="TextureRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_v426w")

[node name="Audio" type="VBoxContainer" parent="TextureRect/Screens"]
visible = false
layout_mode = 0
offset_left = 149.0
offset_top = 14.0
offset_right = 418.0
offset_bottom = 353.0

[node name="Label2" type="Label" parent="TextureRect/Screens/Audio"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxFlat_s5k6m")
text = "Audio Settings"
horizontal_alignment = 1

[node name="HSeparator5" type="HSeparator" parent="TextureRect/Screens/Audio"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="Master" type="VBoxContainer" parent="TextureRect/Screens/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Audio/Master"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Audio/Master"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TextureRect/Screens/Audio/Master/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tssdb")
min_value = -80.0
max_value = 6.0

[node name="HSeparator4" type="HSeparator" parent="TextureRect/Screens/Audio"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="SFX" type="VBoxContainer" parent="TextureRect/Screens/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Audio/SFX"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "SFX"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Audio/SFX"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TextureRect/Screens/Audio/SFX/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tssdb")
min_value = -80.0
max_value = 6.0

[node name="HSeparator3" type="HSeparator" parent="TextureRect/Screens/Audio"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="Music" type="VBoxContainer" parent="TextureRect/Screens/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Audio/Music"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "Music"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Audio/Music"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TextureRect/Screens/Audio/Music/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tssdb")
min_value = -80.0
max_value = 6.0

[node name="HSeparator2" type="HSeparator" parent="TextureRect/Screens/Audio"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="Notification" type="VBoxContainer" parent="TextureRect/Screens/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Audio/Notification"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "Notifications"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Audio/Notification"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TextureRect/Screens/Audio/Notification/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tssdb")
min_value = -80.0
max_value = 6.0

[node name="HSeparator" type="HSeparator" parent="TextureRect/Screens/Audio"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="Ping" type="VBoxContainer" parent="TextureRect/Screens/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Audio/Ping"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "Chat Ping"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Audio/Ping"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TextureRect/Screens/Audio/Ping/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tssdb")
min_value = -80.0
max_value = 6.0

[node name="HSeparator6" type="HSeparator" parent="TextureRect/Screens/Audio"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="Visuals" type="VBoxContainer" parent="TextureRect/Screens"]
layout_mode = 0
offset_left = 149.0
offset_top = 14.0
offset_right = 418.0
offset_bottom = 353.0

[node name="Label2" type="Label" parent="TextureRect/Screens/Visuals"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxFlat_s5k6m")
text = "Visual Settings"
horizontal_alignment = 1

[node name="HSeparator5" type="HSeparator" parent="TextureRect/Screens/Visuals"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="FOV" type="VBoxContainer" parent="TextureRect/Screens/Visuals"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Visuals/FOV"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "
"

[node name="Label" type="Label" parent="TextureRect/Screens/Visuals/FOV/Label"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 19.0
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_sks6k")
text = "Camera FOV"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Visuals/FOV"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TextureRect/Screens/Visuals/FOV/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tssdb")
min_value = 60.0
max_value = 130.0
step = 0.1
value = 75.0

[node name="HSeparator8" type="HSeparator" parent="TextureRect/Screens/Visuals"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="Shadow_Depth" type="VBoxContainer" parent="TextureRect/Screens/Visuals"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Visuals/Shadow_Depth"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "
"

[node name="Label" type="Label" parent="TextureRect/Screens/Visuals/Shadow_Depth/Label"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 19.0
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_sks6k")
text = "Shadow Quality"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Visuals/Shadow_Depth"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TextureRect/Screens/Visuals/Shadow_Depth/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tssdb")
min_value = -1.0
max_value = 2.0
rounded = true

[node name="HSeparator6" type="HSeparator" parent="TextureRect/Screens/Visuals"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="Anti-Aliasing" type="VBoxContainer" parent="TextureRect/Screens/Visuals"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Visuals/Anti-Aliasing"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "
"

[node name="Label" type="Label" parent="TextureRect/Screens/Visuals/Anti-Aliasing/Label"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 19.0
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_sks6k")
text = "MSAA"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Visuals/Anti-Aliasing"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="TextureRect/Screens/Visuals/Anti-Aliasing/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_tssdb")
max_value = 3.0
rounded = true

[node name="HSeparator7" type="HSeparator" parent="TextureRect/Screens/Visuals"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="Bloom" type="VBoxContainer" parent="TextureRect/Screens/Visuals"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/Screens/Visuals/Bloom"]
layout_mode = 2
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_adh8d")
text = "
"

[node name="Label" type="Label" parent="TextureRect/Screens/Visuals/Bloom/Label"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 19.0
theme = ExtResource("3_tssdb")
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_sks6k")
text = "Bloom"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/Screens/Visuals/Bloom"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="TextureRect/Screens/Visuals/Bloom/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/hover = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_i517j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_i517j")
theme_override_icons/checked = SubResource("GradientTexture2D_psoo3")
theme_override_icons/unchecked = SubResource("GradientTexture2D_mm8cu")

[node name="HSeparator4" type="HSeparator" parent="TextureRect/Screens/Visuals"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxLine_h1uor")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 9.0
offset_right = 143.0
offset_bottom = 320.0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0.452251, 0.644531, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 21
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_nctn5")

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_tssdb")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="Template_Button" type="HBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer/Template_Button"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_r52jw")

[node name="Button" type="Button" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer/Template_Button"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxFlat_re2np")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dwx1o")
theme_override_styles/normal = SubResource("StyleBoxFlat_bm522")
text = "Visual"

[node name="Template_Button2" type="HBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer/Template_Button2"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_r52jw")

[node name="Button" type="Button" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer/Template_Button2"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxFlat_re2np")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dwx1o")
theme_override_styles/normal = SubResource("StyleBoxFlat_bm522")
text = "Audio"

[node name="Template_Button3" type="HBoxContainer" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer/Template_Button3"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_r52jw")

[node name="Button" type="Button" parent="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer/Template_Button3"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("4_o3kyl")
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxFlat_re2np")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bm522")
theme_override_styles/normal = SubResource("StyleBoxFlat_bm522")
text = "Input"

[node name="HSeparator2" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_nctn5")

[node name="HSeparator3" type="HSeparator" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_kmnbe")

[connection signal="value_changed" from="TextureRect/Screens/Audio/Master/HBoxContainer/HSlider" to="TextureRect/Screens" method="_on_h_slider_value_changed" binds= [&"Master", &"Audio"]]
[connection signal="value_changed" from="TextureRect/Screens/Audio/SFX/HBoxContainer/HSlider" to="TextureRect/Screens" method="_on_h_slider_value_changed" binds= [&"SFX", &"Audio"]]
[connection signal="value_changed" from="TextureRect/Screens/Audio/Music/HBoxContainer/HSlider" to="TextureRect/Screens" method="_on_h_slider_value_changed" binds= [&"Music", &"Audio"]]
[connection signal="value_changed" from="TextureRect/Screens/Audio/Notification/HBoxContainer/HSlider" to="TextureRect/Screens" method="_on_h_slider_value_changed" binds= [&"Notification", &"Audio"]]
[connection signal="value_changed" from="TextureRect/Screens/Audio/Ping/HBoxContainer/HSlider" to="TextureRect/Screens" method="_on_h_slider_value_changed" binds= [&"Ping", &"Audio"]]
[connection signal="value_changed" from="TextureRect/Screens/Visuals/FOV/HBoxContainer/HSlider" to="TextureRect/Screens" method="_on_h_slider_value_changed" binds= [&"FOV", &"Visuals"]]
[connection signal="value_changed" from="TextureRect/Screens/Visuals/Shadow_Depth/HBoxContainer/HSlider" to="TextureRect/Screens" method="_on_h_slider_value_changed" binds= [&"Shadow_Depth", &"Visuals"]]
[connection signal="value_changed" from="TextureRect/Screens/Visuals/Anti-Aliasing/HBoxContainer/HSlider" to="TextureRect/Screens" method="_on_h_slider_value_changed" binds= [&"Anti-Aliasing", &"Visuals"]]
[connection signal="toggled" from="TextureRect/Screens/Visuals/Bloom/HBoxContainer/CheckButton" to="TextureRect/Screens" method="_on_check_button_toggled" binds= [&"Bloom", &"Visuals"]]
[connection signal="pressed" from="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer/Template_Button/Button" to="TextureRect/Screens" method="_on_button_pressed" binds= ["Visuals"]]
[connection signal="pressed" from="TextureRect/VBoxContainer/ScrollContainer/VBoxContainer/Template_Button2/Button" to="TextureRect/Screens" method="_on_button_pressed" binds= ["Audio"]]
